Change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "asm89/twig-lint",
+    "name": "proyecto404/twig-lint",
     "description": "Standalone twig linter.",
     "keywords": ["twig", "lint"],
     "homepage": "https://github.com/asm89/twig-lint",
